...
        insetPadding: EdgeInsets.all(10),
        shape: RoundedRectangleBorder(
          borderRadius: BorderRadius.circular(20),
        ),
        child: Stack(clipBehavior: Clip.none, children: [
          SingleChildScrollView(
              key: Key('listView'),
              child: Container(
                  padding: EdgeInsets.all(20),
                  width: isPhone ? 400 : 800,
                  height: isPhone ? 1020 : 800,
                  child: Scaffold(
                      backgroundColor: Colors.transparent,
...
          success: (data) => data,
          failure: (_) => [Company(name: 'get data error!')]);
    }

    List<Widget> _widgets = [
      TextFormField(
        key: Key('firstName'),
        decoration: InputDecoration(labelText: 'First Name'),
        controller: _firstNameController,
        validator: (value) {
          if (value!.isEmpty) return 'Please enter a first name?';
          return null;
        },
      ),
      TextFormField(
        key: Key('lastName'),
        decoration: InputDecoration(labelText: 'Last Name'),
        controller: _lastNameController,
        validator: (value) {
          if (value!.isEmpty) return 'Please enter a last name?';
          return null;
        },
...
      TextFormField(
        key: Key('telephoneNr'),
        decoration: InputDecoration(labelText: 'Telephone number'),
        controller: _telephoneController,
      ),
      TextFormField(
        key: Key('email'),
        decoration: InputDecoration(labelText: 'Email address'),
        controller: _emailController,
        validator: (String? value) {
          if (value!.isEmpty) return 'Please enter Email address?';
          if (!RegExp(
                  r"[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?")
...
      ),
      Visibility(
          visible: updatedUser.userGroup != UserGroup.Admin &&
              updatedUser.userGroup != UserGroup.Employee,
          child: Column(children: [
            TextFormField(
              key: Key('newCompanyName'),
              decoration: InputDecoration(labelText: 'New Company Name'),
              controller: _companyController,
              validator: (value) {
                if (value!.isEmpty && _selectedCompany == null)
                  return 'Please enter an existing or new company?';
                return null;
...
                }
              }
            }),
        SizedBox(width: 10),
        Expanded(
            child: ElevatedButton(
                key: Key('updateUser'),
                child: Text(updatedUser.partyId == null ? 'Create' : 'Update'),
                onPressed: () async {
                  if (_formKey.currentState!.validate()) {
                    updatedUser = updatedUser.copyWith(
                        firstName: _firstNameController.text,
                        lastName: _lastNameController.text,
...
