...
                      child: Text("no records found!",
                          key: Key('empty'), textAlign: TextAlign.center));
                index -= 1;
                return index >= users.length
                    ? BottomLoader()
                    : Dismissible(
                        key: Key('userItem'),
                        direction: DismissDirection.startToEnd,
                        child: UserListItem(
                            user: users[index],
                            index: index,
                            userGroup: widget.userGroup,
                            userBloc: _userBloc,
...
        if (state.status == UserStatus.success) {
          isLoading = false;
          users = state.users;
          hasReachedMax = state.hasReachedMax;
          return Scaffold(
              floatingActionButton: FloatingActionButton(
                  key: Key("addNew"),
                  onPressed: () async {
                    await showDialog(
                        barrierDismissible: true,
                        context: context,
                        builder: (BuildContext context) {
                          return BlocProvider.value(
...
